plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.5.1'
}

Properties localProperties = new Properties()
def localPropertiesFile = project.rootProject.file('local.properties')
if (localPropertiesFile.exists()) {
    localPropertiesFile.withInputStream { localProperties.load(it) }
}

def readSetting = { String key, String envKey, String fallback ->
    def gradleValue = findProperty(key)
    def envValue = System.getenv(envKey)
    def localValue = localProperties.getProperty(key)
    return (gradleValue ?: envValue ?: localValue ?: fallback).toString()
}

def packageUser = readSetting('github.package.username', 'GITHUB_ACTOR', '')
def packagePassword = readSetting('github.package.password', 'GITHUB_TOKEN', '')
def readCanonicalSetting = { String key, String envKey, String fallback ->
    def gradleValue = findProperty(key)
    def envValue = System.getenv(envKey)
    return (gradleValue ?: envValue ?: fallback).toString()
}

def projectVersion = readCanonicalSetting('project.version', 'PROJECT_VERSION', '2.1.0-AURELIA')
def projectGroup = readCanonicalSetting('project.group', 'PROJECT_GROUP', 'org.takesome')
def projectArchivesBaseName = readCanonicalSetting('project.archivesBaseName', 'PROJECT_ARCHIVES_BASE_NAME', 'kaylas-ui-engine')
def diagnosticsProjectDir = layout.projectDirectory.asFile.absolutePath

version = projectVersion
group = projectGroup

base {
    archivesName = projectArchivesBaseName
}

if (packageUser && packagePassword) {
    logger.lifecycle('GitHub Packages credentials configured.')
} else {
    logger.lifecycle('GitHub Packages credentials are not configured; publish requires credentials.')
}

application {
    mainClass = 'org.takesome.kaylasEngine.Test'
}

repositories {
    maven { url = uri('local-maven') }
    mavenLocal()
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.register('copyDll', Copy) {
    from configurations.runtimeClasspath
    into layout.buildDirectory
    include '*.dll'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    failOnNoDiscoveredTests = false
}

run {
    systemProperty 'java.library.path', 'lib'
    systemProperty 'kaylasengine.test.exitAfterInit', System.getProperty('kaylasengine.test.exitAfterInit', 'false')
    systemProperty 'kaylasengine.ui.frameTpl', 'assets/demo/test-frame.xml'
    systemProperty 'kaylasengine.ui.mainFrame', 'assets/demo/test-main.xml'
}

tasks.register('ideRun', JavaExec) {
    group = 'application'
    description = 'Runs KaylasUI Engine Test with IDE-friendly JVM arguments.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.takesome.kaylasEngine.Test'
    systemProperty 'java.library.path', 'lib'
    systemProperty 'file.encoding', 'UTF-8'
    systemProperty 'kaylasengine.ui.frameTpl', 'assets/demo/test-frame.xml'
    systemProperty 'kaylasengine.ui.mainFrame', 'assets/demo/test-main.xml'
}

tasks.register('smokeRun', JavaExec) {
    group = 'verification'
    description = 'Runs KaylasUI Engine Test and exits after successful GUI initialization.'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'org.takesome.kaylasEngine.Test'
    systemProperty 'java.library.path', 'lib'
    systemProperty 'file.encoding', 'UTF-8'
    systemProperty 'kaylasengine.test.exitAfterInit', 'true'
    systemProperty 'kaylasengine.ui.frameTpl', 'assets/demo/test-frame.xml'
    systemProperty 'kaylasengine.ui.mainFrame', 'assets/demo/test-main.xml'
    args '--smoke'
}

tasks.register('runtimeEnvironment') {
    group = 'help'
    description = 'Prints runtime information useful for IDE diagnostics.'
    doLast {
        println "Gradle: ${gradle.gradleVersion}"
        println "Java: ${System.getProperty('java.version')} (${System.getProperty('java.vendor')})"
        println "OS: ${System.getProperty('os.name')} ${System.getProperty('os.version')} ${System.getProperty('os.arch')}"
        println "CWD: ${diagnosticsProjectDir}"
        println "Idea active: ${System.getProperty('idea.active') ?: 'false'}"
    }
}


sourceSets {
    main {
        java {
            exclude 'org/foxesworld/engine/service/**'
            exclude 'org/takesome/engine/**'
        }
    }
}

tasks.register('componentRuntimeCheck', JavaExec) {
    group = 'verification'
    description = 'Verifies the 2.1 component catalog, constructor graphs, Lua signal routing, styles and descriptors.'
    dependsOn tasks.named('testClasses')
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'org.takesome.kaylasEngine.gui.components.ComponentRuntimeVerification'
}

tasks.named('check') {
    dependsOn tasks.named('componentRuntimeCheck')
}

dependencies {
    implementation 'org.foxesworld:cfgProvider:2.3.0-STABLE'
    implementation 'club.minnced:java-discord-rpc:2.0.2'
    implementation 'raven.toast:FoxNotifications:1.0.4'
    implementation 'com.formdev:flatlaf:3.4.1'
    implementation 'com.formdev:flatlaf-extras:3.4.1'
    implementation 'com.github.weisj:jsvg:1.6.1'
    implementation 'com.vdurmont-iris:emoji-java:6.0i'
    implementation 'org.luaj:luaj-jse:3.0.1'

    implementation 'com.github.stephengold:j-ogg-vorbis:1.0.4'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.fusesource.jansi:jansi:2.4.0'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
}

publishing {
    repositories {
        maven {
            name = 'GitHubPackages'
            url = uri('https://maven.pkg.github.com/WorldOfKayla/KaylasUIEngine')
            credentials {
                username = packageUser
                password = packagePassword
            }
        }
    }

    publications {
        gpr(MavenPublication) {
            groupId = projectGroup
            artifactId = projectArchivesBaseName
            version = projectVersion
            from components.java
        }
    }
}
